--- a/homepage/index.html
+++ b/homepage/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <!-- The start header section -->
+
     <header class="header">
       <a href="#">
         <img
@@ -36,10 +37,10 @@
             <a href="#about-us" class="nav-link">About us</a>
           </li>
           <li class="main-nav-link">
-            <a href="#our-services" class="nav-link">Our Services</a>
+            <a href="#our-services" class="nav-link">Our services</a>
           </li>
           <li class="main-nav-link">
-            <a href="#our-team" class="nav-link"> Our Team</a>
+            <a href="#our-team" class="nav-link"> Our team</a>
           </li>
           <li class="main-nav-link">
             <a href="#cta" class="nav-link call-to-action"> Request a call</a>
@@ -96,7 +97,7 @@
         <h3 class="heading-secondary">About us</h3>
         <div class="grid--2-cols container responsive">
           <div class="right-col">
-            <div class="animated-text-container">
+            <div class="animated-text-container hide-on-phone">
               <div class="we-grow animated-text">We Grow! &nbsp;</div>
               <div class="your-business animated-text">
                 <span>By meking your business successful!</span>
@@ -124,33 +125,38 @@
             </p>
           </div>
         </div>
-        <div class="grid--2-cols container responsive">
+        <div class="grid--2-cols container responsive hide-on-phone">
           <div class="right-col reorder">
             <p class="about-us-paragraph">
-              We at BABAK offer you a great opportunity to expand your business
-              into the United Arab Emirates or open a totally new business to
-              grab the many opportunities laying in the region market.
+              If you have a grand idea and are looking to turn it into a
+              business set-up in Dubai, we are at your service. BABAK is a team
+              of highly experienced, dedicated consultants who aim to make
+              things far easier for would-be entrepreneurs in the UAE.
             </p>
+
             <p class="about-us-paragraph">
-              BABAK offers provides you with the trade license registration,
-              offices, admin support and legal consultation across all the
-              stages of your business.
+              Our assistance services cover everything from document preparation
+              to checking with the authorities and helping with visa
+              applications. Thus, getting teamed up with our business
+              consultants in Dubai is about seizing the golden opportunity to
+              focus on what matters to you while leaving all the intricacies of
+              company formation to professionals.
             </p>
+
             <p class="about-us-paragraph">
-              No matter what type of business you want to open in the United
-              Arab Emirates; our team has vast experience and knowledge in the
-              laws of UAE, and are always ready to deliver to you a ready-to-go
-              business customized just how you want it so you can start working
-              immediately.
+              As one of the most customer-oriented consultant companies in
+              Dubai, Babak is available 24/7 and offers competitive prices. Give
+              us a call, and we will make you a business owner sooner than you
+              think!
             </p>
           </div>
           <div class="left-col">
-            <div class="animated-text-container">
+            <!-- <div class="animated-text-container">
               <div class="we-grow animated-text">Our Goal! &nbsp;</div>
               <div class="your-business animated-text">
                 <span>Is to make you achieve your goals</span>
               </div>
-            </div>
+            </div> -->
             <div class="right-col-overlay"></div>
           </div>
         </div>
@@ -180,13 +186,13 @@
               alt="Office Picture"
               class="card-image"
             />
-            <h4 class="heading-tertiary">Registration and license</h4>
+            <h4 class="heading-tertiary">Office and admin support</h4>
             <p>
-              for your business in UAE or start a whole new one. Our team of
-              experts will guide you through the required documentation and help
-              you register a license for your business. Our team of experts will
-              help you find the most suitable category for your business and do
-              the needed steps to generate the license for your business.
+              BABAK will also provide you office spaces to rent and admin team
+              to support your business should you need more assistance. Our
+              business center offers a great opportunity for you to start in a
+              professional atmosphere with fully functional office at the lowest
+              cost possible.
             </p>
           </div>
           <div class="our-services-card">
@@ -195,13 +201,13 @@
               alt="Office Picture"
               class="card-image"
             />
-            <h4 class="heading-tertiary">Registration and license</h4>
+            <h4 class="heading-tertiary">Premium Business Services</h4>
             <p>
-              for your business in UAE or start a whole new one. Our team of
-              experts will guide you through the required documentation and help
-              you register a license for your business. Our team of experts will
-              help you find the most suitable category for your business and do
-              the needed steps to generate the license for your business.
+              BABAK also provides premium services as an additional package for
+              your business such as marketing, branding, business consultancy,
+              and more. We offer you a full package so you can start you
+              Business in UAE in the safest, fastest, and most profitable way
+              you can imagine.
             </p>
           </div>
         </div>
@@ -211,6 +217,7 @@
         <h2 class="heading-secondary">Our Team</h2>
         <div class="our-team-cards grid--3-cols responsive">
           <div class="our-team-card">
+            <div class="overlay"></div>
             <img
               src="images/team/ibrahim-1-1.jpg"
               alt="Ibrahim Al hosani"
@@ -225,6 +232,7 @@
           </div>
 
           <div class="our-team-card">
+            <div class="overlay"></div>
             <img
               src="images/team/Hossam.jpg"
               alt="Ibrahim Al hosani"
@@ -237,6 +245,7 @@
           </div>
 
           <div class="our-team-card">
+            <div class="overlay"></div>
             <img
               src="images/team/same7-shaaban.jpg"
               alt="Ibrahim Al hosani"
@@ -255,9 +264,9 @@
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
-              <h2 class="heading-secondary">Request a free counsolation!</h2>
+              <h2 class="heading-secondary">Request a free consultation!</h2>
               <p class="cta-text">
-                We will assist you setting up your business efforlessly
+                We will assist you in setting up your business effortlessly
               </p>
 
               <form class="cta-form" name="sign-up" netlify>
@@ -301,11 +310,7 @@
                 <input type="number" /> -->
               </form>
             </div>
-            <div
-              class="cta-img-box"
-              role="img"
-              aria-label="Woman enjoying food"
-            ></div>
+            <div class="cta-img-box" role="img" aria-label="Small Office"></div>
           </div>
         </div>
       </section>
@@ -325,15 +330,17 @@
         <div class="second-col">
           <h5>Our Services</h5>
           <ul class="our-services-list">
-            <li><a href="">Registration & License</a></li>
-            <li><a href="">Office and admin support</a></li>
-            <li><a href="">Premium business services</a></li>
+            <li><a href="#our-services">Registration & License</a></li>
+            <li><a href="#our-services">Office and admin support</a></li>
+            <li><a href="#our-services">Premium business services</a></li>
           </ul>
         </div>
         <div class="third-col">
           <h5>Contact Info</h5>
           <ul class="contact-list-main">
-            <li class="margin"><a href="">Email: info@babak.com</a></li>
+            <li class="margin">
+              <a href="mailto:info@babak.com">Email: info@babak.com</a>
+            </li>
             <li class="contact-list-social">
               Social:
               <ul class="contact-list-social-icons">
@@ -363,7 +370,9 @@
                 </li>
               </ul>
             </li>
-            <li class="margin"><a href="">Registration & License</a></li>
+            <li class="margin">
+              <a href="+971-65-000-000">Call us: +971-65-000-000</a>
+            </li>
           </ul>
         </div>
       </div>
