--- a/homepage/index.html
+++ b/homepage/index.html
@@ -151,12 +151,12 @@
             </p>
           </div>
           <div class="left-col">
-            <!-- <div class="animated-text-container">
+            <div class="animated-text-container">
               <div class="we-grow animated-text">Our Goal! &nbsp;</div>
               <div class="your-business animated-text">
                 <span>Is to make you achieve your goals</span>
               </div>
-            </div> -->
+            </div>
             <div class="right-col-overlay"></div>
           </div>
         </div>
